New reflection tests cases and fixes
Signed-off-by: aavarghese <avarghese@us.ibm.com>